[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/studio/upgrade_card.gd" id="1"]

[node name="UpgradeCard" type="PanelContainer"]
custom_minimum_size = Vector2(0, 100)
script = ExtResource("1")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="IconRect" type="ColorRect" parent="HBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(64, 64)

[node name="Info" type="VBoxContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="HBox/Info"]
unique_name_in_owner = true
layout_mode = 2
text = "Upgrade Name"

[node name="DescLabel" type="Label" parent="HBox/Info"]
unique_name_in_owner = true
layout_mode = 2
text = "Description"

[node name="LevelLabel" type="Label" parent="HBox/Info"]
unique_name_in_owner = true
layout_mode = 2
text = "Level 0 / 50"

[node name="BuyButton" type="Button" parent="HBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Upgrade (100)"
